--- a/web/src/components/DevItem/styles.css
+++ b/web/src/components/DevItem/styles.css
@@ -17,6 +17,25 @@ li.dev-item header img {
   border-radius: 50%;
 }
 
+button.exclude {
+  width: 16px;
+  height: 16px;
+  padding: 3px;
+  margin-left: auto;
+  align-self: baseline;
+  font-size: 10px;
+  text-align: center;
+  font-weight: bold;
+  color: #fff;
+  background-color: #ff0a0a;
+  border: 0;
+  border-radius: 3px;
+}
+
+button.exclude:hover {
+  background-color: #c31717;
+}
+
 li.dev-item header .user-info {
   margin-left: 10px;
 }
